# OOPlab

./: CMakeLists.txt  main.cpp
include/: ListS.h  MyList.h  Student.h  StudentAVTF.h  StudentFPMI.h
src/: ListS.cpp  Student.cpp  StudentAVTF.cpp  StudentFPMI.cpp
